syntax = "proto3";
option csharp_namespace = "mt5_term_api";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "mt5/mrpc-mt5-error.proto";

package mt5_term_api;
option go_package = "git.mtapi.io/root/mrpc-proto.git/mt5/libraries/go";
// -------------------------------------!!!! MARKET INFO START !!!!!!!--------------------------------------------------

// The MarketInfo service provides information about the current state of the market
service MarketInfo
{
  // Returns the number of available (selected in Market Watch or all) symbols
  // https://www.mql5.com/en/docs/marketinformation/symbolstotal
  rpc SymbolsTotal(SymbolsTotalRequest) returns (SymbolsTotalReply)
  {
    option (google.api.http) =
    {
      get: "/SymbolsTotal"
    };
  };

  // Checks if a symbol with a specified name exists
  // https://www.mql5.com/en/docs/marketinformation/symbolexist
  rpc SymbolExist(SymbolExistRequest) returns (SymbolExistReply)    {
    option (google.api.http) =
    {
      get: "/SymbolExist"
    };
  };

  // Returns the name of a symbol
  // https://www.mql5.com/en/docs/marketinformation/symbolname 
  rpc SymbolName(SymbolNameRequest) returns (SymbolNameReply){
    option (google.api.http) =
    {
      get: "/SymbolName"
    };
  };

  // Selects a symbol in the Market Watch window or removes a symbol from the window
  // https://www.mql5.com/en/docs/marketinformation/symbolselect
  rpc SymbolSelect(SymbolSelectRequest) returns (SymbolSelectReply){
    option (google.api.http) =
    {
      get: "/SymbolSelect"
    };
  };

  // The function checks whether data of a selected symbol in the terminal are synchronized with data on the trade server.
  // https://www.mql5.com/en/docs/marketinformation/symbolissynchronized
  rpc SymbolIsSynchronized(SymbolIsSynchronizedRequest) returns (SymbolIsSynchronizedReply){
    option (google.api.http) =
    {
      get: "/SymbolIsSynchronized"
    };
  };

  // Returns the corresponding property of a specified symbol. Immediately returns the property value.
  // https://www.mql5.com/en/docs/marketinformation/symbolinfodouble
  rpc SymbolInfoDouble(SymbolInfoDoubleRequest) returns (SymbolInfoDoubleReply)
  {
    option (google.api.http) =
    {
      get: "/SymbolInfoDouble"
    };
  };

  // Returns the corresponding property of a specified symbol. 
  // https://www.mql5.com/en/docs/marketinformation/symbolinfointeger
  rpc SymbolInfoInteger(SymbolInfoIntegerRequest) returns (SymbolInfoIntegerReply)
  {
    option (google.api.http) =
    {
      get: "/SymbolInfoInteger"
    };
  };

  // Returns the corresponding property of a specified symbol. Immediately returns the property value
  // https://www.mql5.com/en/docs/marketinformation/symbolinfostring  
  rpc SymbolInfoString(SymbolInfoStringRequest) returns (SymbolInfoStringReply)
  {
    option (google.api.http) =
    {
      get: "/SymbolInfoString"
    };
  };

  // Returns the margin rates depending on the order type and direction
  // https://www.mql5.com/en/docs/marketinformation/symbolinfomarginrate
  rpc SymbolInfoMarginRate(SymbolInfoMarginRateRequest) returns (SymbolInfoMarginRateReply)
  {
    option (google.api.http) =
    {
      get: "/SymbolInfoMarginRate"
    };
  };

  // The function returns current prices of a specified symbol in a variable of the MqlTick type
  // https://www.mql5.com/en/docs/marketinformation/symbolinfotick
  rpc SymbolInfoTick (SymbolInfoTickRequest) returns (SymbolInfoTickRequestReply)
  {
    option (google.api.http) =
    {
      get: "/SymbolInfoTick"
    };
  };

  // Allows receiving time of beginning and end of the specified quoting sessions for a specified symbol and day of week
  // https://www.mql5.com/en/docs/marketinformation/symbolinfosessionquote
  rpc SymbolInfoSessionQuote (SymbolInfoSessionQuoteRequest) returns (SymbolInfoSessionQuoteReply)
  {
    option (google.api.http) =
    {
      get: "/SymbolInfoSessionQuote"
    };
  };

  // Allows receiving time of beginning and end of the specified trading sessions for a specified symbol and day of week
  // https://www.mql5.com/en/docs/marketinformation/symbolinfosessiontrade
  rpc SymbolInfoSessionTrade(SymbolInfoSessionTradeRequest) returns (SymbolInfoSessionTradeReply)
  {
    option (google.api.http) =
    {
      get: "/SymbolInfoSessionTrade"
    };
  };

  // Provides opening of Depth of Market for a selected symbol, and subscribes for receiving notifications of the DOM changes
  // https://www.mql5.com/en/docs/marketinformation/marketbookadd
  rpc MarketBookAdd(MarketBookAddRequest) returns (MarketBookAddReply)
  {
    option (google.api.http) =
    {
      get: "/MarketBookAdd"
    };
  }

  // Provides closing of Depth of Market for a selected symbol, and cancels the subscription for receiving notifications of the DOM changes
  // https://www.mql5.com/en/docs/marketinformation/marketbookrelease
  rpc MarketBookRelease(MarketBookReleaseRequest) returns (MarketBookReleaseReply)
  {
    option (google.api.http) =
    {
      get: "/MarketBookRelease"
    };
  };

  // Returns a structure array MqlBookInfo containing records of the Depth of Market of a specified symbol
  // https://www.mql5.com/en/docs/marketinformation/marketbookget
  rpc MarketBookGet(MarketBookGetRequest) returns (MarketBookGetReply)
  {
    option (google.api.http) =
    {
      get: "/MarketBookGet"
    };
  };
}

// 1. GetSymbolsTotal
message SymbolsTotalRequest {
  bool mode = 1; // True - only symbols in MarketWatch
}
message SymbolsTotalReply {
  oneof response {
    SymbolsTotalData data = 1;
    Error error = 2;
  }
}
message SymbolsTotalData {
  int32 total = 1; // If the 'selected' parameter is true, the function returns the number of symbols selected in MarketWatch. If the value is false, it returns the total number of all symbols.
}

// 2. CheckSymbolExistence
message SymbolExistRequest {
  string name = 1;
}
message SymbolExistReply {
  oneof response {
    SymbolExistData data = 1;
    Error error = 2;
  }
}
message SymbolExistData {
  bool exists = 1; // If false, the symbol is not found among standard and custom ones (https://www.mql5.com/en/docs/customsymbols).
  bool is_custom = 2; // If true, the detected symbol is a custom one.
}

// 3. SymbolName
message SymbolNameRequest {
  int32 index = 1;  // Order number of a symbol
  bool selected = 2; // Request mode. If the value is true, the symbol is taken from the list of symbols selected in MarketWatch. If the value is false, the symbol is taken from the general list.
}
message SymbolNameReply {
  oneof response {
    SymbolNameData data = 1;
    Error error = 2;
  }
}
message SymbolNameData {
  string name = 1; // Value of string type with the symbol name
}

// 4. SymbolSelect
message SymbolSelectRequest {
  string symbol = 1; // Symbol name
  bool select = 2; // Switch. If the value is false, a symbol should be removed from MarketWatch, otherwise a symbol should be selected in this window. A symbol can't be removed if the symbol chart is open, or there are open positions for this symbol
}
message SymbolSelectReply {
  oneof response {
    SymbolSelectData data = 1;
    Error error = 2;
  }
}
message SymbolSelectData {
  bool success = 1; // In case of failure returns false
}

// 5. SymbolIsSynchronized
message SymbolIsSynchronizedRequest {
  string symbol = 1; // Symbol name
}
message SymbolIsSynchronizedReply {
  oneof response {
    SymbolIsSynchronizedData data = 1;
    Error error = 2;
  }
}
message SymbolIsSynchronizedData {
  bool synchronized = 1; // If data are synchronized, returns 'true'; otherwise returns 'false'
}

// 6. SymbolInfoDouble
// Enum to represent the property identifier
message SymbolInfoDoubleRequest {
  string symbol = 1; // symbol
  SymbolInfoDoubleProperty type = 2; // identifier of the property
}
message SymbolInfoDoubleReply {
  oneof response {
    SymbolInfoDoubleData data = 1;
    Error error = 2;
  }
}
message SymbolInfoDoubleData {
  double value = 1; //  the property value
}

enum SymbolInfoDoubleProperty {
  SYMBOL_BID = 0;  // Bid - best sell offer
  SYMBOL_BIDHIGH = 1 ; // Maximal Bid of the day
  SYMBOL_BIDLOW = 2 ; // Minimal Bid of the day
  SYMBOL_ASK = 3 ; // Ask - best buy offer
  SYMBOL_ASKHIGH = 4 ; // Maximal Ask of the day
  SYMBOL_ASKLOW = 5 ; // Minimal Ask of the day
  SYMBOL_LAST = 6 ; // Price of the last deal
  SYMBOL_LASTHIGH = 7 ; // Maximal Last of the day
  SYMBOL_LASTLOW = 8 ; // Minimal Last of the day
  SYMBOL_VOLUME_REAL = 9 ; // Volume of the last deal
  SYMBOL_VOLUMEHIGH_REAL = 10 ; // Maximum Volume of the day
  SYMBOL_VOLUMELOW_REAL = 11 ; // Minimum Volume of the day
  SYMBOL_OPTION_STRIKE = 12 ; // The strike price of an option. The price at which an option buyer can buy (in a Call option) or sell (in a Put option) the underlying asset, and the option seller is obliged to sell or buy the appropriate amount of the underlying asset.
  SYMBOL_POINT = 13 ; // Symbol point value
  SYMBOL_TRADE_TICK_VALUE = 14 ; // Value of SYMBOL_TRADE_TICK_VALUE_PROFIT
  SYMBOL_TRADE_TICK_VALUE_PROFIT = 15 ; // Calculated tick price for a profitable position
  SYMBOL_TRADE_TICK_VALUE_LOSS = 16 ; // Calculated tick price for a losing position
  SYMBOL_TRADE_TICK_SIZE = 17 ; // Minimal price change
  SYMBOL_TRADE_CONTRACT_SIZE = 18 ; // Trade contract size
  SYMBOL_TRADE_ACCRUED_INTEREST = 19 ; // Accrued interest – accumulated coupon interest, i.e. part of the coupon interest calculated in proportion to the number of days since the coupon bond issuance, or the last coupon interest payment
  SYMBOL_TRADE_FACE_VALUE = 20 ; // Face value – initial bond value set by the issuer
  SYMBOL_TRADE_LIQUIDITY_RATE = 21 ; // Liquidity Rate is the share of the asset that can be used for the margin.
  SYMBOL_VOLUME_MIN = 22 ; // Minimal volume for a deal
  SYMBOL_VOLUME_MAX = 23 ; // Maximal volume for a deal
  SYMBOL_VOLUME_STEP = 24 ; // Minimal volume change step for deal execution
  SYMBOL_VOLUME_LIMIT = 25 ; // Maximum allowed aggregate volume of an open position and pending orders in one direction (buy or sell) for the symbol. For example, with the limitation of 5 lots, you can have an open buy position with the volume of 5 lots and place a pending order Sell Limit with the volume of 5 lots. But in this case you cannot place a Buy Limit pending order (since the total volume in one direction will exceed the limitation) or place Sell Limit with the volume more than 5 lots.
  SYMBOL_SWAP_LONG = 26 ; // Long swap value
  SYMBOL_SWAP_SHORT = 27 ; // Short swap value
  SYMBOL_SWAP_SUNDAY = 28 ; // Swap calculation ratio (SYMBOL_SWAP_LONG or SYMBOL_SWAP_SHORT) for overnight positions rolled over from SUNDAY to the next day. There following values are supported: 0 – no swap is charged, 1 – single swap, 3 – triple swap
  SYMBOL_SWAP_MONDAY = 29 ; // Swap calculation ratio (SYMBOL_SWAP_LONG or SYMBOL_SWAP_SHORT) for overnight positions rolled over from Monday to Tuesday
  SYMBOL_SWAP_TUESDAY = 30 ; // Swap calculation ratio (SYMBOL_SWAP_LONG or SYMBOL_SWAP_SHORT) for overnight positions rolled over from Tuesday to Wednesday
  SYMBOL_SWAP_WEDNESDAY = 31 ; // Swap calculation ratio (SYMBOL_SWAP_LONG or SYMBOL_SWAP_SHORT) for overnight positions rolled over from Wednesday to Thursday
  SYMBOL_SWAP_THURSDAY = 32 ; // Swap calculation ratio (SYMBOL_SWAP_LONG or SYMBOL_SWAP_SHORT) for overnight positions rolled over from Thursday to Friday
  SYMBOL_SWAP_FRIDAY = 33 ; // Swap calculation ratio (SYMBOL_SWAP_LONG or SYMBOL_SWAP_SHORT) for overnight positions rolled over from Friday to Saturday
  SYMBOL_SWAP_SATURDAY = 34 ; // Swap calculation ratio (SYMBOL_SWAP_LONG or SYMBOL_SWAP_SHORT) for overnight positions rolled over from Saturday to Sunday
  SYMBOL_MARGIN_INITIAL = 35 ; // Initial margin means the amount in the margin currency required for opening a position with the volume of one lot. It is used for checking a client's assets when he or she enters the market.
  SYMBOL_MARGIN_MAINTENANCE = 36 ; // The maintenance margin. If it is set, it sets the margin amount in the margin currency of the symbol, charged from one lot. It is used for checking a client's assets when his/her account state changes. If the maintenance margin is equal to 0, the initial margin is used.
  SYMBOL_SESSION_VOLUME = 37 ; // Summary volume of current session deals
  SYMBOL_SESSION_TURNOVER = 38 ; // Summary turnover of the current session
  SYMBOL_SESSION_INTEREST = 39 ; // Summary open interest
  SYMBOL_SESSION_BUY_ORDERS_VOLUME = 40 ; // Current volume of Buy orders
  SYMBOL_SESSION_SELL_ORDERS_VOLUME = 41 ; // Current volume of Sell orders
  SYMBOL_SESSION_OPEN = 42 ; // Open price of the current session
  SYMBOL_SESSION_CLOSE = 43 ; // Close price of the current session
  SYMBOL_SESSION_AW = 44 ; // Average weighted price of the current session
  SYMBOL_SESSION_PRICE_SETTLEMENT = 45 ; // Settlement price of the current session
  SYMBOL_SESSION_PRICE_LIMIT_MIN = 46 ; // Minimal price of the current session
  SYMBOL_SESSION_PRICE_LIMIT_MAX = 47 ; // Maximal price of the current session
  SYMBOL_MARGIN_HEDGED = 48 ; // Contract size or margin value per one lot of hedged positions (oppositely directed positions of one symbol). Two margin calculation methods are possible for hedged positions. The calculation method is defined by the broker. Basic calculation: If the initial margin (SYMBOL_MARGIN_INITIAL) is specified for a symbol, the hedged margin is specified as an absolute value (in monetary terms). If the initial margin is not specified (equal to 0), SYMBOL_MARGIN_HEDGED is equal to the size of the contract, that will be used to calculate the margin by the appropriate formula in accordance with the type of the financial instrument (SYMBOL_TRADE_CALC_MODE). Calculation for the largest position: The SYMBOL_MARGIN_HEDGED value is not taken into account. The volume of all short and all long positions of a symbol is calculated. For each direction, a weighted average open price and a weighted average rate of conversion to the deposit currency is calculated. Next, using the appropriate formula chosen in accordance with the symbol type (SYMBOL_TRADE_CALC_MODE) the margin is calculated for the short and the long part. The largest one of the values is used as the margin.
  SYMBOL_PRICE_CHANGE = 49 ; // Change of the current price relative to the end of the previous trading day in %
  SYMBOL_PRICE_VOLATILITY = 50 ; // Price volatility in %
  SYMBOL_PRICE_THEORETICAL = 51 ; // Theoretical option price
  SYMBOL_PRICE_DELTA = 52 ; // Option/warrant delta shows the value the option price changes by, when the underlying asset price changes by 1
  SYMBOL_PRICE_THETA = 53 ; // Option/warrant theta shows the number of points the option price is to lose every day due to a temporary breakup, i.e. when the expiration date approaches
  SYMBOL_PRICE_GAMMA = 54 ; // Option/warrant gamma shows the change rate of delta – how quickly or slowly the option premium changes
  SYMBOL_PRICE_VEGA = 55 ; // Option/warrant vega shows the number of points the option price changes by when the volatility changes by 1%
  SYMBOL_PRICE_RHO = 56 ; // Option/warrant rho reflects the sensitivity of the theoretical option price to the interest rate changing by 1%
  SYMBOL_PRICE_OMEGA = 57 ; // Option/warrant omega. Option elasticity shows a relative percentage change of the option price by the percentage change of the underlying asset price
  SYMBOL_PRICE_SENSITIVITY = 58 ; // Option/warrant sensitivity shows by how many points the price of the option's underlying asset should change so that the price of the option changes by one point
  SYMBOL_COUNT = 59 ; // The count of symbol properties
}

// 7. GetSymbolInfoInteger
message SymbolInfoIntegerRequest {
  string symbol = 1; // symbol
  SymbolInfoIntegerProperty type = 2; // Identifier of a symbol property
}
message SymbolInfoIntegerReply {
  oneof response {
    SymbolInfoIntegerData data = 1;
    Error error = 2;
  }
}
message SymbolInfoIntegerData {
  int64 value = 1; // Variable of the long type receiving the value of the requested property
}

enum SymbolInfoIntegerProperty {
  SYMBOL_SUBSCRIPTION_DELAY = 0;  // Symbol data arrives with a delay. The property can be requested only for symbols selected in MarketWatch (SYMBOL_SELECT = true). The ERR_MARKET_NOT_SELECTED (4302) error is generated for other symbols
  SYMBOL_SECTOR = 1;  // The sector of the economy to which the asset belongs
  SYMBOL_INDUSTRY = 2;  // The industry or the economy branch to which the symbol belongs
  SYMBOL_CUSTOM = 3;  // It is a custom symbol – the symbol has been created synthetically based on other symbols from the Market Watch and/or external data sources
  SYMBOL_BACKGROUND_COLOR = 4;  // The color of the background used for the symbol in Market Watch
  SYMBOL_CHART_MODE = 5;  // The price type used for generating symbols bars, i.e. Bid or Last
  SYMBOL_EXIST = 6;  // Symbol with this name exists
  SYMBOL_SELECT = 7;  // Symbol is selected in Market Watch
  SYMBOL_VISIBLE = 8;  // Symbol is visible in Market Watch. Some symbols (mostly, these are cross rates required for calculation of margin requirements or profits in deposit currency) are selected automatically, but may not be visible in Market Watch. To be displayed such symbols have to be explicitly selected.
  SYMBOL_SESSION_DEALS = 9;  // Number of deals in the current session
  SYMBOL_SESSION_BUY_ORDERS = 10;  // Number of Buy orders at the moment
  SYMBOL_SESSION_SELL_ORDERS = 11;  // Number of Sell orders at the moment
  SYMBOL_VOLUME = 12;  // Volume of the last deal
  SYMBOL_VOLUMEHIGH = 13;  // Maximal day volume
  SYMBOL_VOLUMELOW = 14;  // Minimal day volume
  SYMBOL_TIME = 15;  // Time of the last quote
  SYMBOL_TIME_MSC = 16;  // Time of the last quote in milliseconds since 1970.01.01
  SYMBOL_DIGITS = 17;  // Digits after a decimal point
  SYMBOL_SPREAD_FLOAT = 18;  // Indication of a floating spread
  SYMBOL_SPREAD = 19;  // Spread value in points
  SYMBOL_TICKS_BOOKDEPTH = 20;  // Maximal number of requests shown in Depth of Market. For symbols that have no queue of requests, the value is equal to zero.
  SYMBOL_TRADE_CALC_MODE = 21;  // Contract price calculation mode
  SYMBOL_TRADE_MODE = 22;  // Order execution type
  SYMBOL_START_TIME = 23;  // Date of the symbol trade beginning (usually used for futures)
  SYMBOL_EXPIRATION_TIME = 24;  // Date of the symbol trade end (usually used for futures)
  SYMBOL_TRADE_STOPS_LEVEL = 25;  // Minimal indention in points from the current close price to place Stop orders
  SYMBOL_TRADE_FREEZE_LEVEL = 26;  // Distance to freeze trade operations in points
  SYMBOL_TRADE_EXEMODE = 27;  // Deal execution mode
  SYMBOL_SWAP_MODE = 28;  // Swap calculation model
  SYMBOL_SWAP_ROLLOVER3DAYS = 29;  // The day of week to charge 3-day swap rollover
  SYMBOL_MARGIN_HEDGED_USE_LEG = 30;  // Calculating hedging margin using the larger leg (Buy or Sell)
  SYMBOL_EXPIRATION_MODE = 31;  // Flags of allowed order expiration modes
  SYMBOL_FILLING_MODE = 32;  // Flags of allowed order filling modes
  SYMBOL_ORDER_MODE = 33;  // Flags of allowed order types
  SYMBOL_ORDER_GTC_MODE = 34;  // Expiration of Stop Loss and Take Profit orders, if SYMBOL_EXPIRATION_MODE=SYMBOL_EXPIRATION_GTC (Good till canceled)
  SYMBOL_OPTION_MODE = 35;  // Option type
  SYMBOL_OPTION_RIGHT = 36;  // Option right (Call/Put)
}

// 8. GetSymbolInfoString
message SymbolInfoStringRequest {
  string symbol = 1;     // symbol 
  SymbolInfoStringProperty type = 2; // Property identifier
}
message SymbolInfoStringReply {
  oneof response {
    SymbolInfoStringData data = 1;
    Error error = 2;
  }
}
message SymbolInfoStringData {
  string value = 1;  // Variable of the string type receiving the value of the requested property
}

enum SymbolInfoStringProperty {
  SYMBOL_BASIS = 0;  // The underlying asset of a derivative
  SYMBOL_CATEGORY = 1;  // The name of the sector or category to which the financial symbol belongs
  SYMBOL_COUNTRY = 2;  // The country to which the financial symbol belongs
  SYMBOL_SECTOR_NAME = 3;  // The sector of the economy to which the financial symbol belongs
  SYMBOL_INDUSTRY_NAME = 4;  // The industry branch or the industry to which the financial symbol belongs
  SYMBOL_CURRENCY_BASE = 5;  // Basic currency of a symbol
  SYMBOL_CURRENCY_PROFIT = 6;  // Profit currency
  SYMBOL_CURRENCY_MARGIN = 7;  // Margin currency
  SYMBOL_BANK = 8;  // Feeder of the current quote
  SYMBOL_DESCRIPTION = 9;  // Symbol description
  SYMBOL_EXCHANGE = 10;  // The name of the exchange in which the financial symbol is traded
  SYMBOL_FORMULA = 11;  // The formula used for the custom symbol pricing. If the name of a financial symbol used in the formula starts with a digit or contains a special character (">" ", ".", "-", "&", "#" and so on) quotation marks should be used around this symbol name. Synthetic symbol: "@ESU19"/EURCAD Calendar spread: "Si-9.13"-"Si-6.13" Euro index: 34.38805726 * pow(EURUSD,0.3155) * pow(EURGBP,0.3056) * pow(EURJPY,0.1891) * pow(EURCHF,0.1113) * pow(EURSEK,0.0785)
  SYMBOL_ISIN = 12;  // The name of a symbol in the ISIN system (International Securities Identification Number). The International Securities Identification Number is a 12-digit alphanumeric code that uniquely identifies a security. The presence of this symbol property is determined on the side of a trade server.
  SYMBOL_PAGE = 13;  // The address of the web page containing symbol information. This address will be displayed as a link when viewing symbol properties in the terminal
  SYMBOL_PATH = 14;  // Path in the symbol tree
}

// 9. SymbolInfoMarginRate
message SymbolInfoMarginRateRequest {
  string symbol = 1; // Symbol name
  ENUM_ORDER_TYPE order_type = 2; // Order type
}
message SymbolInfoMarginRateReply {
  oneof response {
    SymbolInfoMarginRateData data = 1;
    Error error = 2;
  }
}
message SymbolInfoMarginRateData {
  double maintenance_margin_rate = 1; // A double type variable for receiving a maintenance margin rate. Maintenance margin is a minimum amount for maintaining an open position of 1 lot in the appropriate direction. Multiplying the rate by the maintenance margin, we receive the amount of funds to be reserved on the account after an order of the specified type is activated
  double initial_margin_rate = 2; // A double type variable for receiving an initial margin rate. Initial margin is a security deposit for 1 lot deal in the appropriate direction. Multiplying the rate by the initial margin, we receive the amount of funds to be reserved on the account when placing an order of the specified type.
}
enum ENUM_ORDER_TYPE {
  ORDER_TYPE_BUY = 0;  // Market Buy order
  ORDER_TYPE_SELL = 1;  // Market Sell order
  ORDER_TYPE_BUY_LIMIT = 2;  // Buy Limit pending order
  ORDER_TYPE_SELL_LIMIT = 3;  // Sell Limit pending order
  ORDER_TYPE_BUY_STOP = 4;  // Buy Stop pending order
  ORDER_TYPE_SELL_STOP = 5;  // Sell Stop pending order
  ORDER_TYPE_BUY_STOP_LIMIT = 6;  // Upon reaching the order price, a pending Buy Limit order is placed at the StopLimit price
  ORDER_TYPE_SELL_STOP_LIMIT = 7;  // Upon reaching the order price, a pending Sell Limit order is placed at the StopLimit price
  ORDER_TYPE_CLOSE_BY = 8;  // Order to close a position by an opposite one
}

// 10. SymbolInfoTick
message SymbolInfoTickRequest {
  string symbol = 1; // Symbol name
}
message SymbolInfoTickRequestReply {
  oneof response {
    MrpcMqlTick data = 1;
    Error error = 2;
  }
}
message MrpcMqlTick {
  int64 time = 1;            // Time of the last prices update (Unix timestamp)
  double bid = 2;          // Current Bid price
  double ask = 3;          // Current Ask price
  double last = 4;         // Price of the last deal (Last)
  uint64 volume = 5;       // Volume for the current Last price
  int64 time_msc = 6;      // Time of a price last update in milliseconds
  uint32 flags = 7;        // Tick flags
  double volume_real = 8;  // Volume for the current Last price with greater accuracy
}

// 11. GetSymbolInfoSessionQuote
message SymbolInfoSessionQuoteRequest {
  string symbol = 1; // Symbol name
  DayOfWeek day_of_week = 2; // day of the week
  uint32 session_index = 3; // Ordinal number of a session, whose beginning and end time we want to receive. Indexing of sessions starts with 0
}
message SymbolInfoSessionQuoteReply {
  oneof response {
    SymbolInfoSessionQuoteData data = 1;
    Error error = 2;
  }
}
message SymbolInfoSessionQuoteData {
  google.protobuf.Timestamp from = 1; // Session beginning time in seconds from 00 hours 00 minutes, in the returned value date should be ignored
  google.protobuf.Timestamp to = 2; // Session end time in seconds from 00 hours 00 minutes, in the returned value date should be ignored
}
enum DayOfWeek {
  SUNDAY = 0;  // Sunday
  MONDAY = 1;  // Monday
  TUESDAY = 2;  // Tuesday
  WEDNESDAY = 3;  // Wednesday
  THURSDAY = 4;  // Thursday
  FRIDAY = 5;  // Friday
  SATURDAY = 6;  // Saturday
}

// 12. GetSymbolInfoSessionTrade
message SymbolInfoSessionTradeRequest {
  string symbol = 1; // Symbol name
  DayOfWeek day_of_week = 2; // day of the week
  uint32 session_index = 3; // Ordinal number of a session, whose beginning and end time we want to receive. Indexing of sessions starts with 0
}
message SymbolInfoSessionTradeReply {
  oneof response {
    SymbolInfoSessionTradeData data = 1;
    Error error = 2;
  }
}
message SymbolInfoSessionTradeData {
  google.protobuf.Timestamp from = 1; // Session beginning time in seconds from 00 hours 00 minutes, in the returned value date should be ignored.
  google.protobuf.Timestamp to = 2; // Session end time in seconds from 00 hours 00 minutes, in the returned value date should be ignored.
}

// 13. MarketBookAdd
message MarketBookAddRequest {
  string symbol = 1; // The name of a symbol, whose Depth of Market is to be used in the Expert Advisor or script
}
message MarketBookAddReply {
  oneof response {
    MarketBookAddData data = 1;
    Error error = 2;
  }
}
message MarketBookAddData {
  bool opened_successfully = 1; // The true value if opened successfully, otherwise false
}

// 14. MarketBookRelease
message MarketBookReleaseRequest {
  string symbol = 1; // The name of a symbol
}
message MarketBookReleaseReply {
  oneof response {
    MarketBookReleaseData data = 1;
    Error error = 2;
  }
}
message MarketBookReleaseData {
  bool closed_successfully = 1; // The true value if closed successfully, otherwise false
}

// 15. MarketBookGetRequest MarketBookGetReply
message MarketBookGetRequest {
  string symbol = 1; // The name of a symbol
}
message MarketBookGetReply {
  oneof response {
    MarketBookGetData data = 1;
    Error error = 2;
  }
}
message MarketBookGetData {
  repeated MrpcMqlBookInfo mql_book_infos = 1;// Reference to an array of Depth of Market records.
}
message MrpcMqlBookInfo {
  BookType type = 1;
  double price = 2;
  int64 volume = 3;
  double volume_real = 4;
}
enum BookType {
  BOOK_TYPE_SELL = 0;  // Sell order (Offer)
  BOOK_TYPE_BUY = 1;   // Buy order (Bid)
  BOOK_TYPE_SELL_MARKET = 2;  // Sell order by Market
  BOOK_TYPE_BUY_MARKET = 3;   // Buy order by Market
}

// -------------------------------------!!!! MARKET INFO END !!!!!!!----------------------------------------------------